manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: employee-microservice
        stack: frontend
    name: employee-microservice
spec:
    replicas: 2
    selector:
        matchLabels:
            app: employee-microservice
    template:
        metadata:
            labels:
                app: employee-microservice
        spec:
            containers:
                -   image: dhinojosa/employee-app:latest
                    imagePullPolicy: Always
                    name: employee-microservice
                    ports:
                        -   name: web
                            containerPort: 8080
