manifests/pod-debug.yaml
apiVersion: v1
kind: Pod
metadata:
    name: curl-jq-debug
spec:
    containers:
        -   name: curl-jq-debug
            image: badouralix/curl-jq
            command:
                - "/bin/sh"
            args:
                -  "-c"
                - "while true; do echo hello; sleep 10;done"
