manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: employee-microservice
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx-example
    rules:
        -   http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: employee-microservice
                                port:
                                    number: 30201
